# game-server

./: Beast.cpp  Beast.h  Beneficial_items.cpp  Beneficial_items.h  CMakeLists.txt  CONST_AND_DEFINE.h  Character.cpp  Character.h  Coins.cpp  Coins.h  Encampment.cpp  Encampment.h  LargeTreasure.cpp  LargeTreasure.h  LeftTreasure.cpp  LeftTreasure.h  Main_Window.cpp  Main_Window.h  Map_Window.cpp  Map_Window.h  Player.cpp  Player.h  Point.cpp  Point.h  Treasure.cpp  Treasure.h  commonLibray.h  commonObjects.h  initColor.cpp  initColor.h  main.cpp  mapa.txt  menageOfPlayer.cpp  menageOfPlayer.h  server_pthread.cpp  server_pthread.h  setNcurses.cpp  setNcurses.h
